# ldap-auth-rs

./: .env.example  .gitignore  .typos.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  codecov.yml  docker-compose.yml
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  codecov.yml  spellcheck.yml
docs/: API_EXAMPLES.md  ARCHITECTURE.md  CLI.md  CODE_QUALITY.md  CONFIGURATION.md  DEPLOYMENT.md  LDAP_COMPLIANCE_TESTING.md  METRICS.md  README.md  SECURITY.md
k8s/: QUICKSTART.md  README.md  SECRETS_AND_BACKUPS.md
k8s/base/: certificate.yaml  configmap.yaml  deployment.yaml  health-check.yaml  hpa.yaml  issuer.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  redis-deployment.yaml  redis-pvc.yaml  redis-service.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
k8s/overlays/dev/: deployment-patch.yaml  hpa-patch.yaml  kustomization.yaml
k8s/overlays/production/: deployment-patch.yaml  hpa-patch.yaml  ingress.yaml  kustomization.yaml  redis-patch.yaml  redis-replica-deployment.yaml  redis-replica-service.yaml
k8s/overlays/staging/: deployment-patch.yaml  ingress.yaml  kustomization.yaml
scripts/: setup.sh  test.sh
src/: api.rs  auth.rs  config.rs  db.rs  error.rs  ldap.rs  ldap_lib.rs  lib.rs  main.rs  metrics.rs  models.rs  password.rs  redis_db.rs  tls.rs
tests/: api_routes_test.rs  auth_integration_test.rs  case_sensitivity_test.rs  cli_sanity_test.sh  integration_test.rs  ldap3_integration_test.rs  ldap_compliance_test.sh  ldap_integration_test.rs  ldap_replica_failover_test.sh  metrics_test.rs
