[package]
name = "ldap-auth-rs"
version = "0.1.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Lightweight Rust-based LDAP authentication service with REST API and Redis backend"

[dependencies]
# Web framework
axum = "0.8"
axum-extra = { version = "0.12", features = ["typed-header"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# TLS support
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2.2"
rustls-pki-types = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Redis
redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.22.1"

# LDAP (we'll implement a basic LDAP server using tokio)
ldap3 = "0.12.1"

# Password hashing
argon2 = { version = "0.5", features = ["std"] }
rand = "0.9.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0.18"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus = "0.14"
axum-prometheus = "0.10.0"

# Utilities
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.13", features = ["json"] }
urlencoding = "2.1.3"

[dev-dependencies]
# Testing
mockall = "0.14"
testcontainers = "0.27"
reqwest = { version = "0.13", features = ["json"] }
tokio-test = "0.4"
ldap3 = "0.12.1"  # Same library Valkey uses for LDAP client
serde_json = "1.0"  # For test data setup
serial_test = "3.0"  # For serializing tests that modify environment

# Profile optimizations
[profile.dev]
# Disable debug info in dev builds to speed up compilation
debug = 0
# Keep incremental compilation for local development
incremental = true

[profile.release]
# No debug info in release builds
debug = 0
# Enable LTO for smaller binaries
lto = "thin"
# Optimize for size
opt-level = "z"
# Fewer codegen units for better optimization
codegen-units = 1
# Strip symbols
strip = true

[profile.test]
# Faster test compilation
debug = 0
incremental = true
